# subs_overlay

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
examples/: multiple_overlays.rs
src/: api_server.rs  color_utils.rs  config.rs  controller.rs  lib.rs  main.rs  mcp_server.rs  window_manager.rs
tests/: subtitle_tests.rs
ui/: overlay.slint  subtitle-window.slint
