[package]
name = "slint-subtitles"
version = "0.1.0"
edition = "2021"

[lib]
name = "slint_subtitles"
path = "src/lib.rs"

[dependencies]
slint = "1.14"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
dirs = "5.0"
toml = "0.8"

# Para click-through en Windows
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
slint-build = "1.14"

[profile.release]
opt-level = "z"     # Optimizar para tamaño
lto = true          # Link-time optimization
codegen-units = 1   # Mejor optimización
strip = true        # Quitar símbolos debug
