[package]
name = "subs_overlay"
version = "0.1.0"
edition = "2021"
description = "A library for creating transparent text overlays with input passthrough"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/subs_overlay"

[lib]
name = "subs_overlay_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
slint = { version = "1.14.1", features = ["raw-window-handle-06"] }
# Windows dependencies for window management
windows = { version = "0.54.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
] }
raw-window-handle = "0.6.0"
winit = "0.29.10"
once_cell = "1.19.0"
uuid = { version = "1.7.0", features = ["v4"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[build-dependencies]
slint-build = "1.14.1"
